<?xml version="1.0" encoding="utf-8"?>
<layout>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#CCCCFF"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="100dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"
                        android:gravity="center"
                        android:text="AMI Software"
                        android:textColor="#000066"
                        android:textSize="50dp"
                        android:textStyle="italic" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="50dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="50dp">

                    <TextView
                        android:id="@+id/txt_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/title"
                        android:textColor="#000066"
                        android:textSize="35dp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/txt_phone"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_below="@id/txt_login"
                        android:layout_marginTop="50dp"
                        android:hint="@string/phone_hint"
                        android:textColor="@color/black"
                        android:textSize="18dp" />

                    <EditText
                        android:id="@+id/txt_pass"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_below="@id/txt_phone"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:paddingTop="20dp"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/txt_forgot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_pass"
                        android:layout_marginLeft="267dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/forgot_password"
                        android:textColor="#000066" />

                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_below="@id/txt_forgot"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="80dp"
                        android:text="@string/btn_login"
                        android:textSize="18dp">

                    </Button>

                </RelativeLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>