<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/lnCreditCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="@string/title_add_employee"
                android:textColor="@color/black"
                android:textFontWeight="400"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="23dp"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/name_field"
                    android:textColor="@color/black"
                    android:textFontWeight="400"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="*"
                    android:textColor="@color/red"
                    android:textSize="18sp"
                    android:visibility="invisible" />
            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvName"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_radius_10dp">

                <EditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:layout_centerInParent="true"
                    android:layout_marginHorizontal="19dp"
                    android:layout_marginTop="4dp"
                    android:backgroundTint="@color/white"
                    android:hint="@string/name_field"
                    android:inputType="text"
                    android:maxLength="19"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textFontWeight="400"
                    android:textSize="16sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tvErrorCardNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:textColor="@color/red"
                android:visibility="invisible" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvName"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_radius_10dp"
                android:visibility="gone">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtBirthday"
                        android:layout_width="match_parent"
                        android:layout_height="57dp"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="19dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="18dp"
                        android:backgroundTint="@color/white"
                        android:hint="MM\YY"
                        android:maxLength="255"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textFontWeight="400"
                        android:textSize="16sp" />


                </RelativeLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/tvErrorExpiration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:textColor="@color/red"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="23dp"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/tvPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/birth_day"
                    android:textColor="@color/black"
                    android:textFontWeight="400"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="*"
                    android:textColor="@color/red"
                    android:textSize="18sp"
                    android:visibility="invisible" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvName"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_radius_10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtCvv"
                        android:layout_width="match_parent"
                        android:layout_height="57dp"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="19dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="18dp"
                        android:backgroundTint="@color/white"
                        android:gravity="center_vertical"
                        android:hint="@string/select_birthday"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textFontWeight="400"
                        android:textSize="16sp" />


                </RelativeLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/tvErrorCVV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:textColor="@color/red"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="23dp"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/email_field"
                    android:textColor="@color/black"
                    android:textFontWeight="400"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="*"
                    android:textColor="@color/red"
                    android:textSize="18sp"
                    android:visibility="invisible" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvName"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_radius_10dp">

                <EditText
                    android:id="@+id/edtHolderName"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:layout_centerInParent="true"
                    android:layout_marginHorizontal="19dp"
                    android:layout_marginTop="4dp"
                    android:backgroundTint="@color/white"
                    android:hint="@string/email_field"
                    android:inputType="textEmailAddress"
                    android:maxLength="255"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textFontWeight="400"
                    android:textSize="16sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tvErrorHolderName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:textColor="@color/red"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="23dp"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/phone_number_field"
                    android:textColor="@color/black"
                    android:textFontWeight="400"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="*"
                    android:textColor="@color/red"
                    android:textSize="18sp"
                    android:visibility="invisible" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_radius_10dp">

                <EditText
                    android:id="@+id/edtSđt"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:layout_centerInParent="true"
                    android:layout_marginHorizontal="19dp"
                    android:layout_marginTop="4dp"
                    android:backgroundTint="@color/white"
                    android:hint="@string/phone_number_field"
                    android:inputType="phone"
                    android:maxLength="255"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textFontWeight="400"
                    android:textSize="16sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tvErrorExpiredDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:textColor="@color/red"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="23dp"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:includeFontPadding="false"
                    android:text="@string/position_filed"
                    android:textColor="@color/black"
                    android:textFontWeight="400"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="*"
                    android:textColor="@color/red"
                    android:textSize="18sp"
                    android:visibility="invisible" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvName"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_radius_10dp">

                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tvErrorPin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:textColor="@color/red"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="23dp"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/password_field"
                    android:textColor="@color/black"
                    android:textFontWeight="400"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="*"
                    android:textColor="@color/red"
                    android:textSize="18sp"
                    android:visibility="invisible" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvName"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_radius_10dp">

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:layout_centerInParent="true"
                    android:layout_marginHorizontal="19dp"
                    android:layout_marginTop="4dp"
                    android:backgroundTint="@color/white"
                    android:hint="@string/password_field"
                    android:inputType="textCapSentences"
                    android:maxLength="255"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textFontWeight="400"
                    android:textSize="16sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="23dp"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/confirm_pw_feild"
                    android:textColor="@color/black"
                    android:textFontWeight="400"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="*"
                    android:textColor="@color/red"
                    android:textSize="18sp"
                    android:visibility="invisible" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvName"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_radius_10dp">

                <EditText
                    android:id="@+id/edtconfirmpw"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:layout_centerInParent="true"
                    android:layout_marginHorizontal="19dp"
                    android:layout_marginTop="4dp"
                    android:backgroundTint="@color/white"
                    android:hint="@string/confirm_pw_feild"
                    android:inputType="textCapSentences"
                    android:maxLength="255"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textFontWeight="400"
                    android:textSize="16sp" />
            </RelativeLayout>

            <Button
                android:id="@+id/btnadd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginVertical="60dp"
                android:text="Thêm nhân viên"
                android:textAllCaps="false" />
        </LinearLayout>

    </ScrollView>
</layout>
